@@ -3,6 +3,7 @@
 * Sort by images is not working - FIXED
 * Custom Sidebars plugin compatibility - ADDED
 * Support added for image/webp type image upload - ADDED
+* GD Pages shows blank content when page not setup with Divi page builder - FIXED
 
 = 2.0.0.62 =
 * GD Archive pages not rendering shortcodes when Elementor is active - FIXED
